syntax = "proto3";

package pb;

import  "google/protobuf/timestamp.proto";

option go_package = "github.com/Quaestiox/JustTalk_backend/pb";

message CreateUserRequest{
  string name = 1;
  string password = 2;
  string nickname = 3;
  string avatar_url = 4;
  repeated int64 friends = 5;
}

message CreateUserResponse{
  int64 id = 1;
  string name = 2;
  string nickname = 3;
  string avatar_url = 4;
  int32 friend_count = 5;
  repeated int64 friends = 6;
  google.protobuf.Timestamp create_at = 7;
  google.protobuf.Timestamp update_at = 8;
}


